--- a/MealPlanner.Web/package.json
+++ b/MealPlanner.Web/package.json
@@ -8,11 +8,15 @@
         "install": "webpack --config webpack.config.vendor.js"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.8",
+        "@fortawesome/vue-fontawesome": "^0.1.2",
+        "applicationinsights": "^1.0.6",
         "axios": "^0.15.3",
         "core-js": "^2.4.1",
         "font-awesome": "^4.6.3",
         "moment": "^2.22.1",
         "vue": "^2.1.8",
+        "vue-application-insights": "^1.0.3",
         "vue-router": "^2.1.1",
         "vue-server-renderer": "^2.1.8",
         "vue-template-compiler": "^2.1.8",
@@ -29,18 +33,19 @@
         "babel-preset-stage-2": "^6.18.0",
         "babel-register": "^6.18.0",
         "bootstrap": "4.1.3",
-        "popper.js": "1.14.4",
         "cross-env": "^3.1.3",
         "css-loader": "^0.26.1",
         "event-source-polyfill": "^0.0.7",
         "extract-text-webpack-plugin": "^2.0.0-rc",
         "file-loader": "^0.9.0",
+        "@fortawesome/fontawesome-free": "5.5.0",
         "jquery": "3.3.1",
         "node-sass": "^4.1.0",
         "optimize-css-assets-webpack-plugin": "^1.3.1",
+        "popper.js": "1.14.4",
         "sass-loader": "^4.1.0",
         "style-loader": "^0.13.1",
-        "url-loader": "^0.5.7",
+        "url-loader": "^1.1.2",
         "vue-loader": "^10.0.2",
         "vue-moment": "^4.0.0-0",
         "webpack": "^2.2.0",
