--- a/MealPlanner.Web/appsettings.json
+++ b/MealPlanner.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "dbConnectionString": "Server=LAPTOP-641LCUHO;Database=Mealplanner;User Id=mpWebUser; Password=c71eda14!e1648078c0d-43694a9ff2ab;"
+         "dbConnectionString": ""
     },
   "Logging": {
     "IncludeScopes": false,
