--- a/MealPlanner.Web/appsettings.json
+++ b/MealPlanner.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-         "dbConnectionString": ""
-    },
+        "dbConnectionString": null,
+        },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
