--- a/MealPlanner.Web/package.json
+++ b/MealPlanner.Web/package.json
@@ -17,6 +17,7 @@
         "moment": "^2.22.1",
         "vue": "^2.1.8",
         "vue-application-insights": "^1.0.3",
+        "vue-cookies": "^1.5.7",
         "vue-router": "^2.1.1",
         "vue-server-renderer": "^2.1.8",
         "vue-template-compiler": "^2.1.8",
