--- a/MealPlanner.Web/appsettings.json
+++ b/MealPlanner.Web/appsettings.json
@@ -1,9 +1,7 @@
 {
     "ConnectionStrings": {
-      ///  "dbConnectionString": null,
-       // "dbConnectionString": "Server=LAPTOP-641LCUHO;Database=Mealplanner;User Id=mpWebUser; Password=c71eda14!e1648078c0d-43694a9ff2ab;"
-       "dbConnectionString": "Server=tcp:mealplannercb.database.windows.net,1433;Initial Catalog=MealPlanner;Persist Security Info=False;User ID=webUser;Password=zFAP4IwAQF1qTRNA2spX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=5;"
-    },
+        "dbConnectionString": null
+      },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
