--- a/MealPlanner.Data/MealPlanner.Data.csproj
+++ b/MealPlanner.Data/MealPlanner.Data.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Dapper.FluentMap" Version="1.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.AzureKeyVault.HostingStartup" Version="2.0.4" />
     <PackageReference Include="Umi.Core" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
