--- a/MealPlanner.Web/appsettings.json
+++ b/MealPlanner.Web/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "dbConnectionString": "Server=LAPTOP-641LCUHO;Database=Mealplanner;User Id=mpWebUser; Password=c71eda14!e1648078c0d-43694a9ff2ab;",
+    "dbConnectionString": "Server=localhost;Database=Mealplanner;User Id=mpWebUser; Password=c71eda14!e1648078c0d-43694a9ff2ab;",
     "Logging": {
         "IncludeScopes": false,
         "LogLevel": {
