--- a/MealPlanner.Web/MealPlanner.Web.csproj
+++ b/MealPlanner.Web/MealPlanner.Web.csproj
@@ -6,10 +6,11 @@
     <UserSecretsId>e53d8827-fdcb-496d-8290-9ff7fcf0ec04</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Joonasw.AspNetCore.SecurityHeaders" Version="2.7.0" />
+    <PackageReference Include="Joonasw.AspNetCore.SecurityHeaders" Version="2.8.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
+    <PackageReference Include="TwoFactorAuth.Net" Version="1.3.4" />
     <PackageReference Include="Umi.Core" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
@@ -24,6 +25,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Update="Views\Home\Join.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Home\ValidateToken.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Home\New.cshtml">
