--- a/MealPlanner.Web/package.json
+++ b/MealPlanner.Web/package.json
@@ -24,6 +24,7 @@
         "vuex-router-sync": "^4.0.1"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.5.0",
         "aspnet-webpack": "^2.0.1",
         "babel-core": "^6.21.0",
         "babel-loader": "^6.2.10",
@@ -32,15 +33,14 @@
         "babel-preset-es2015": "^6.18.0",
         "babel-preset-stage-2": "^6.18.0",
         "babel-register": "^6.18.0",
-        "bootstrap": "4.1.3",
+        "bootstrap": "^4.3.1",
         "cross-env": "^3.1.3",
         "css-loader": "^0.26.1",
         "event-source-polyfill": "^0.0.7",
         "extract-text-webpack-plugin": "^2.0.0-rc",
         "file-loader": "^0.9.0",
-        "@fortawesome/fontawesome-free": "5.5.0",
         "jquery": "3.3.1",
-        "node-sass": "^4.1.0",
+        "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^1.3.1",
         "popper.js": "1.14.4",
         "sass-loader": "^4.1.0",
