Several bug fixes for Weekplanning and retrieving of meals

--- a/MealPlanner.Web/MealPlanner.Web.csproj
+++ b/MealPlanner.Web/MealPlanner.Web.csproj
@@ -6,7 +6,7 @@
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Joonasw.AspNetCore.SecurityHeaders" Version="2.8.1" />
