--- a/MealPlanner.Web/package.json
+++ b/MealPlanner.Web/package.json
@@ -27,30 +27,30 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.5.0",
         "aspnet-webpack": "^2.0.1",
-        "babel-core": "^6.21.0",
-        "babel-loader": "^6.2.10",
-        "babel-plugin-transform-async-to-generator": "^6.22.0",
-        "babel-plugin-transform-runtime": "^6.15.0",
-        "babel-preset-es2015": "^6.18.0",
-        "babel-preset-stage-2": "^6.18.0",
-        "babel-register": "^6.18.0",
+        "babel-core": "7.0.0-beta.3",
+        "babel-loader": "8.0.5",
+        "babel-plugin-transform-async-to-generator": "6.24.1",
+        "babel-plugin-transform-runtime": "6.23.0",
+        "babel-preset-es2015": "6.24.1",
+        "babel-preset-stage-2": "6.24.1",
+        "babel-register": "6.26.0",
         "bootstrap": "^4.3.1",
         "cross-env": "^3.1.3",
-        "css-loader": "^2.1.1",
+        "css-loader": "1.0.1",
         "event-source-polyfill": "^0.0.7",
-        "extract-text-webpack-plugin": "^2.0.0-rc",
+        "extract-text-webpack-plugin": "3.0.2",
         "file-loader": "^0.9.0",
         "jquery": "3.3.1",
         "node-sass": "^4.11.0",
-        "optimize-css-assets-webpack-plugin": "^5.0.1",
-        "popper.js": "1.14.4",
-        "sass-loader": "^4.1.0",
+        "optimize-css-assets-webpack-plugin": "3.2.0",
+        "popper.js": "1.14.7",
+        "sass-loader": "7.1.0",
         "style-loader": "^0.13.1",
         "sw-precache-webpack-plugin": "^0.11.5",
         "url-loader": "^1.1.2",
         "vue-loader": "^10.0.2",
         "vue-moment": "^4.0.0-0",
-        "webpack": "^2.2.0",
+        "webpack": "3.12.0",
         "webpack-hot-middleware": "^2.12.2",
         "webpack-pwa-manifest": "^4.0.0"
     }
