--- a/MealPlanner.EndToEndTests/package.json
+++ b/MealPlanner.EndToEndTests/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "jsotp": "^1.0.4",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "fs": "^0.0.1-security",
+    "util": "^0.11.1"
   }
 }
